@@ -65,6 +65,7 @@ void EngineSettings::Misc::load() {
 	save_onload = true;
 	save_onexit = true;
 	save_pos_onexit = false;
+	save_oncutscene = true;
 	camera_speed = 10.f;
 	save_buyback = true;
 	keep_buyback_on_map_change = true;
@@ -128,6 +129,9 @@ void EngineSettings::Misc::load() {
 			// @ATTR save_pos_onexit|bool|If the game gets saved on exiting, store the player's current position instead of the map spawn position.
 			else if (infile.key == "save_pos_onexit")
 				save_pos_onexit = Parse::toBool(infile.val);
+			// @ATTR save_oncutscene|bool|Saves the game when triggering any cutscene via an Event.
+			else if (infile.key == "save_oncutscene")
+				save_oncutscene = Parse::toBool(infile.val);
 			// @ATTR camera_speed|float|Modifies how fast the camera moves to recenter on the player. Larger values mean a slower camera. Default value is 10.
 			else if (infile.key == "camera_speed") {
 				camera_speed = Parse::toFloat(infile.val);
